tests/_resources/error_gcns/syntax_unopened_parenthesis.expected
error[E007]: Unmatched ')' — extra closing bracket with no matching opener. Found ')'
  --> syntax_unopened_parenthesis.gcn:6:24
     |
   4 |     identities
   5 |     {
   6 |         U[] = C[] + I[]);
     |                        ^ unbalanced parentheses
   7 |     };
   8 | };
     |
   = note: Count opening and closing parentheses
   = note: Check function calls have closing ')'
   = note: Use an editor with parenthesis matching
